--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 .hero {
   grid-area: hero;
   min-height: 300px;
-  background-image: url(img/hero.jpg);
+  background-image: url(../img/hero.jpg);
   background-size: cover;
   background-position: center;
   padding: 50px;
@@ -53,13 +53,13 @@ body {
 
 .feature-1 {
   grid-area: feature-1;
-  background-image: url(img/honey-ghicks.jpg);
+  background-image: url(../img/honey-ghicks.jpg);
   background-size: cover;
 }
 
 .feature-2 {
   grid-area: feature-2;
-  background-image: url(img/thunderloin.jpg);
+  background-image: url(../img/thunderloin.jpg);
   background-size: cover;
 }
 
@@ -185,7 +185,7 @@ body {
 
 /* Gallery */
 .gallery {
-  margin-top: 80px;
+  margin-top: 60px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 5px;
@@ -196,6 +196,32 @@ body {
   grid-column-end: -1;
   text-align: center;
   margin-bottom: 20px;
+}
+
+/* Menus */
+.menus {
+  margin-top: 60px;
+  display: grid;
+  grid-template-areas:
+    'menus-title menus-title menus-title'
+    'menus-img menus-img menus-desc'
+    'menus-img menus-img menus-desc';
+  gap: 15px;
+}
+
+.menus h2 {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.menus-img {
+  grid-area: menus-img;
+}
+
+.menus-desc {
+  grid-area: menus-desc;
 }
 
 /* Responsive Breakpoints */
